[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "gitpython>=3.1.44",
    "profanity-check>=1.0.3",
    "psutil>=6.1.1",
    "requests>=2.32.3",
    "yt-dlp>=2025.1.26",
]
